<resources>
    <string name="app_name">RomamNumbers</string>

    <string name="lb_roman">Roman number:</string>
    <string name="lb_result">Result:</string>

    <string name="action_settings">Settings</string>
    <string name="h_egroman">e.g. MCMXIV</string>
    <string name="tbtn_consult">CONSULT</string>
    <string name="tbtn_clean">CLEAN</string>
    <string name="msj_wrong">Wrong Entry</string>
    <string name="msj_empty">Roman number missing</string>

</resources>

