<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RomanNumber">

    <TextView android:text="@string/lb_roman" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_romannumber"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/h_egroman"
        android:textSize="32sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_consult"
        android:layout_below="@+id/et_romannumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/tbtn_consult"
        android:textSize="26sp"
        android:onClick="Calculation"
        android:nestedScrollingEnabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tbtn_clean"
        android:id="@+id/btn_clean"
        android:textSize="26sp"
        android:layout_alignTop="@+id/btn_consult"
        android:layout_alignRight="@+id/et_romannumber"
        android:layout_alignEnd="@+id/et_romannumber" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_result"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="34sp"
        android:text="xxxx" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_result"
        android:id="@+id/textView3"
        android:layout_above="@+id/tv_result"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textIsSelectable="true"
        android:textSize="24sp" />

</RelativeLayout>
